--- a/Love/res/values/strings.xml
+++ b/Love/res/values/strings.xml
@@ -4,5 +4,25 @@
     <string name="app_name">\@Love</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-
+    
+    <!-- test value -->
+    
+    <string name="testname">安秦</string>
+    <string name="testsig">大傻逼</string>
+    <string name="testage">22岁</string>
+    <string name="testnum">12</string>
+    
+    <!-- Values for left menu 
+    
+    <string name=""></string>
+    -->
+    <string name="attention">关注</string>
+    <string name="fans">粉丝</string>
+    <string name="broadcast">广播</string>
+    <string name="person">个人主页</string>
+    <string name="event">事件</string>
+    <string name="album">相册</string>
+	<string name="video">创建视频</string>
+	<string name="congrate">祝福墙</string>
+	<string name="settings">系统设置</string>
 </resources>
