git-svn-id: http://192.168.0.201:8000/svn/wedding2/Android@1353 e014ceee-942d-7345-a814-9ef81cb11927

--- a/Love/res/values/strings.xml
+++ b/Love/res/values/strings.xml
@@ -4,22 +4,21 @@
     <string name="app_name">\@Love</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    
+
     <!-- test value -->
-    
+
     <string name="testname">安秦</string>
     <string name="testsig">大傻逼</string>
     <string name="testage">22岁</string>
     <string name="testnum">12</string>
-    
     <string name="testvideo">魅力中国</string>
     <string name="testsound">我爱你中国</string>
     <string name="testdate">2013.12.12 12:00:00</string>
     <string name="testcount">12</string>
-    
+
     <!-- Values for title -->
     <string name="title_broadcast">广播流</string>
-    
+
     <!-- Values for xlistview -->
     <string name="xlistview_header_hint_normal">下拉刷新</string>
     <string name="xlistview_header_hint_ready">松开刷新数据</string>
@@ -27,9 +26,10 @@
     <string name="xlistview_header_last_time">上次更新时间：</string>
     <string name="xlistview_footer_hint_normal">查看更多</string>
     <string name="xlistview_footer_hint_ready">松开载入更多</string>
-    <!-- Values for left menu 
+    <!--
+    Values for left menu 
     
-    <string name=""></string>
+    <string name=""></string>
     -->
     <string name="attention">关注</string>
     <string name="fans">粉丝</string>
@@ -37,7 +37,14 @@
     <string name="person">个人主页</string>
     <string name="event">事件</string>
     <string name="album">相册</string>
-	<string name="video">创建视频</string>
-	<string name="congrate">祝福墙</string>
-	<string name="settings">系统设置</string>
+    <string name="video">创建视频</string>
+    <string name="congrate">祝福墙</string>
+    <string name="settings">系统设置</string>
+    <string name="title_activity_person">PersonActivity</string>
+
+    <!-- Values for person -->
+    <string name="person_album">我的相册</string>
+    <string name="person_event">我的事件</string>
+    <string name="person_edit_title">个人设置</string>
+
 </resources>
