--- a/Love/res/values/strings.xml
+++ b/Love/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="testcount">12</string>
     <string name="testdate2">2013.12.11</string>
     <string name="testlocation">北京</string>
-    <string name="testtitle">我的事件我的事件我的事件我的事件我的事件我的事件我的事件</string>
+    <string name="testtitle">我的事件</string>
 
 
     <!-- Values for title -->
@@ -57,6 +57,21 @@
     <string name="event_invited">参加事件</string>
     <string name="event_privacy_private">(私密)</string>
     <string name="event_privacy_public">(公开)</string>
+    
+    <!-- Values for create event -->
+    <string name="event_create_title">编辑事件</string>
+    <string name="event_create_title_hint">标题</string>
+    <string name="event_create_des_hint">事件描述</string>
+    <string name="event_create_location_hint">地点</string>
+    <string name="event_create_date_start">添加开始日期</string>
+    <string name="event_create_date_end">添加结束日期</string>
+    <string name="event_create_time_start">开始时间</string>
+    <string name="event_create_time_end">结束时间</string>
+    <string name="event_create_add_partner">添加组织者</string>
+    <string name="event_create_radio_public">公开</string>
+    <string name="event_create_radio_read_only">只读</string>
+    <string name="event_create_radio_private">私密</string>
+    <string name="event_create_add_cover">添加封面</string>
     
 
 </resources>
