git-svn-id: http://192.168.0.201:8000/svn/wedding2/Android@1481 e014ceee-942d-7345-a814-9ef81cb11927

--- a/Love/res/values/strings.xml
+++ b/Love/res/values/strings.xml
@@ -93,5 +93,10 @@
     <string name="album_dialog_save">储存</string>
     <string name="album_dialog_pic_save">保存到本地</string>
     <string name="album_dialog_pic_delete">删除照片</string>
+    
+    <!-- Values for video -->
+    <string name="video_title">选择照片</string>
+    <string name="video_button_add">添加元素</string>
+    <string name="video_edit_hint">视频标题</string>
 
 </resources>
