git-svn-id: http://192.168.0.201:8000/svn/wedding2/Android@1496 e014ceee-942d-7345-a814-9ef81cb11927

--- a/Love/res/values/strings.xml
+++ b/Love/res/values/strings.xml
@@ -99,5 +99,7 @@
     <string name="video_title">选择照片</string>
     <string name="video_button_add">添加元素</string>
     <string name="video_edit_hint">视频标题</string>
+    <string name="video_tab_love">Love相册</string>
+    <string name="video_tab_local">本地相册</string>
 
 </resources>
