--- a/Love/res/values/strings.xml
+++ b/Love/res/values/strings.xml
@@ -33,7 +33,7 @@
     <string name="xlistview_header_last_time">上次更新时间：</string>
     <string name="xlistview_footer_hint_normal">查看更多</string>
     <string name="xlistview_footer_hint_ready">松开载入更多</string>
-    
+
     <!-- Values for left menu -->
     <string name="attention">关注</string>
     <string name="fans">粉丝</string>
@@ -103,5 +103,11 @@
     <string name="video_tab_local">本地相册</string>
     <string name="video_pick_local_image">图片</string>
     <string name="video_pick_local_video">视频</string>
+    
+    <!-- Values for Congrate -->
+    <string name="congrate_title">祝福墙</string>
+    <string name="congrate_post">发表祝福</string>
+    <string name="congrate_post_title">发表祝福</string>
+    <string name="congrate_hint">输入祝福内容</string>
 
 </resources>
