git-svn-id: http://192.168.0.201:8000/svn/wedding2/Android@1612 e014ceee-942d-7345-a814-9ef81cb11927

--- a/Love/res/values/strings.xml
+++ b/Love/res/values/strings.xml
@@ -130,5 +130,9 @@
     <string name="settings_notify_quake">震动</string>
     <string name="settings_notify_none">无</string>
 
+    <!-- Values for comment -->
+    <string name="comment_title">评论</string>
+    <string name="hlistview_hint_ready">松开返回</string>
+	<string name="hlistview_hint_normal">到底啦！</string>
 
 </resources>
